# omnipath-server-django

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  POSTGRESINTRUCTIONS.md  README.md  development_tools.md  docker-compose.yaml  manage.py  pyproject.toml
_scripts/: legacy_loader.py  old_code.py  old_code.txt
_scripts/sql/: example_query.sql  initial_db_production_setup.sql  initial_db_sandbox_setup.sql
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
omnipath_server/: README.md  __init__.py  _connection.py  _main.py  _metadata.py  _session.py
omnipath_server/loader/: __init__.py  _legacy.py
omnipath_server/schema/: _legacy.py
omnipath_server/server/: __init__.py  _legacy.py  _main.py
omnipath_server/service/: __init__.py  _legacy.py
omnipath_server_django/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
omnipath_site/: asgi.py  settings.py  urls.py  wsgi.py
polls/: views.py
sql/: initial_db_setup.sql
tests/data_testing/: subset_complexes.tsv
