[tool.poetry]
name = "omnipath-server-django"
version = "0.1.0"
description = "OmniPath Web server with API capabilities based on Django."
authors = ["Edwin Carreño <ecarrenolozano@gmail.com>"]
license = "GNU General Public License Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.6"
djangorestframework = "^3.15"
django-cors-headers = "^4.7.0"
pre-commit = "^4.2.0"
toml = "^0.10.2"
pypath-common = "^0.2.5"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
