[tool.poetry]
name = "omnipath-server-django"
version = "0.1.0"
description = "OmniPath Web server with API capabilities based on Django."
authors = ["Omnipath team <omnipathdb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.6"
djangorestframework = "^3.15"
django-cors-headers = "^4.7.0"
toml = "^0.10.2"
pypath-common = "^0.2.5"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
drf-yasg = {extras = ["validation"], version = "^1.21.10"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
isort = "^6.0.1"
black = "^25.1.0"
rust = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
