[tool.poetry]
name = "omnipath-server-django"
version = "0.1.0"
description = "OmniPath Web server with API capabilities based on Django."
authors = ["Omnipath team <omnipathdb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.6"
djangorestframework = "^3.15"
django-cors-headers = "^4.7.0"
toml = "^0.10.2"
pypath-common = "^0.2.5"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
drf-yasg = {extras = ["validation"], version = "^1.21.10"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8-pyproject = "^1.2.3"
rust = "^1.3.1"
pytest = "^8.3.5"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#-----------  Tool configurations
[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.flake8]
max-line-length = 120
exclude = ["venv", "__pycache__", "build", "dist"]
ignore = ["E203", "W503"]
extend-ignore = ["E402"]
max-complexity = 10

[tool.djlint]
profile="django"
